# dtap-ex

./: .gitignore  README.md
esp32c6-idf-rsa/: .envrc  Cargo.toml  sdkconfig.defaults
esp32c6-idf-rsa/.cargo/: config.toml
esp32c6-idf-rsa/keys/: spub.pem
esp32c6-idf-rsa/src/: main.rs  rsa.rs  wrap.rs
esp32c6-idf-tls/: Cargo.toml
esp32c6-idf-tls/.cargo/: config.toml
esp32c6-idf-tls/src/: main.rs
esp32s3-idf-ota/: Cargo.toml  build.rs  partitions.csv  sdkconfig.defaults
esp32s3-idf-ota/.cargo/: config.toml
esp32s3-idf-ota/src/: main.rs
esp32s3-intr/: Cargo.toml  bacon.toml
esp32s3-intr/.cargo/: config.toml
esp32s3-intr/src/: main.rs
esp32s3-wifi/: Cargo.toml  bacon.toml
esp32s3-wifi/.cargo/: config.toml
esp32s3-wifi/src/: main.rs
pp2w-https/: Cargo.toml  README.md  memory.x
pp2w-https/.cargo/: config.toml
pp2w-https/src/: error.rs  main.rs  panic.rs  upload.rs  util.rs
